--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -16,14 +16,16 @@
     <string name="service_restart">重新启动</string>
     <string name="start_service_title_root"><![CDATA[通过 root 权限启动服务]]></string>
     <string name="start_service_title_adb"><![CDATA[通过 adb 启动或升级服务]]></string>
-    <string name="start_service_summary_adb"><![CDATA[使用 adb 并不困难，请阅读下面的帮助。帮助随时更新，并包含遇到问题的解决方案。]]></string>
+    <string name="start_service_summary_adb"><![CDATA[使用 adb 并不困难，请阅读下面的帮助。帮助随时更新，并包含遇到问题的解决方案（如 Shizuku 突然停止）。]]></string>
     <string name="start_service_summary_root"><![CDATA[
     若启动成功，则 Shizuku 将在开机后自动启动。
     <br>如果无法正常开机启动，请检查您的系统或是第三方工具是否限制了 Shizuku。
     <p>除 Google 外，几乎所有厂商都有自己的后台限制机制（部分厂商尤为疯狂，如 OnePlus，严重影响许多应用的功能）。
     <br>请参考 <b><a href="https://dontkillmyapp.com/">dontkillmyapp.com</a></b> 了解如何关闭限制。]]></string>
-    <string name="copy_command">复制指令</string>
-    <string name="send_command">发送指令</string>
+    <string name="copy_command">复制</string>
+    <string name="send_command">发送</string>
+    <string name="view_command">查看 adb 指令</string>
+    <string name="view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* 还有一些其他注意事项，请确认你已阅读帮助。]]></string>
     <string name="auth_allow">总是允许</string>
     <string name="auth_deny">拒绝</string>
     <string name="auth_message"><![CDATA[要允许 <b>%1$s</b> 以 <b>%2$s</b> 身份调用 API 吗？]]></string>
@@ -71,7 +73,7 @@
     <string name="action_view_apps">获取更多</string>
     <string name="adb_no_permission_title">adb 权限受限</string>
     <string name="adb_no_permission_message"><![CDATA[这通常是由您的设备供应商完成，我们无法解决。<br>请尝试在「开发者选项」中查找相关选项。例如，在 MIUI 中，选项是「USB 调试（安全设置）」。]]></string>
-    <string name="view_detailed_online_help">阅读详细在线帮助</string>
+    <string name="view_online_help">阅读在线帮助</string>
     <string name="dialog_cannot_open_browser_title">无法启动浏览器</string>
     <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> 已被复制到剪贴板。]]></string>
     <string name="get_more_summary">查看使用 Shizuku 的应用</string>
