--- a/manager/src/main/res/values-zh-rHK/strings.xml
+++ b/manager/src/main/res/values-zh-rHK/strings.xml
@@ -16,14 +16,16 @@
     <string name="service_restart">重新啟動</string>
     <string name="start_service_title_root"><![CDATA[透過 root 權限啟動服務]]></string>
     <string name="start_service_title_adb"><![CDATA[透過 adb 啟動或升級服務]]></string>
-    <string name="start_service_summary_adb"><![CDATA[使用 adb 並不困難，請閱讀下面的幫助。幫助隨時更新，幷包含遇到問題的解決方案。]]></string>
+    <string name="start_service_summary_adb"><![CDATA[使用 adb 並不困難，請閱讀下面的幫助。幫助隨時更新，幷包含遇到問題的解決方案（如 Shizuku 突然停止）。]]></string>
     <string name="start_service_summary_root"><![CDATA[
     若啓動成功，則 Shizuku 將在開機後自動啓動。
     <br>如果無法正常開機啓動，請檢查您的系統或是第三方工具是否限制了 Shizuku。
     <p>除 Google 外，幾乎所有廠商都有自己的後臺限制機制（部分廠商尤為瘋狂，如 OnePlus，嚴重影響許多應用程式的功能）。
     <br>請參考 <b><a href="https://dontkillmyapp.com/">dontkillmyapp.com</a></b> 瞭解如何關閉限制。]]></string>
-    <string name="copy_command">複製指令</string>
-    <string name="send_command">傳送指令</string>
+    <string name="copy_command">複製</string>
+    <string name="send_command">傳送</string>
+    <string name="view_command">檢視 adb 指令</string>
+    <string name="view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* 還有一些其他注意事項，請確認你已閱讀幫助。]]></string>
     <string name="auth_allow">一律允許</string>
     <string name="auth_deny">拒絕</string>
     <string name="auth_message"><![CDATA[要允許 <b>%1$s</b> 以 <b>%2$s</b> 身份調用 API 嗎？]]></string>
@@ -71,7 +73,7 @@
     <string name="action_view_apps">取得更多</string>
     <string name="adb_no_permission_title">adb 權限受限</string>
     <string name="adb_no_permission_message"><![CDATA[這通常是由您的裝置供應商完成，我們無法解決。<br>請嘗試在「開發者選項」中查詢相關選項。例如，在 MIUI 中，選項是「USB 除錯（安全設定）」。]]></string>
-    <string name="view_detailed_online_help">閱讀詳細線上幫助</string>
+    <string name="view_online_help">閱讀線上幫助</string>
     <string name="dialog_cannot_open_browser_title">無法啟動瀏覽器</string>
     <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> 已被複制到剪貼簿。]]></string>
     <string name="get_more_summary">檢視使用 Shizuku 的應用程式</string>
