--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -67,5 +67,6 @@
     <string name="dialog_cannot_open_browser_title">无法启动浏览器</string>
     <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> 已被复制到剪贴板。]]></string>
     <string name="get_more_summary">查看使用 Shizuku 的应用</string>
-
+    <string name="learn_more">了解 Shizuku</string>
+    <string name="learn_more_summary">了解如何使用 Shizuku 开发或查看使用 Shizuku 的应用</string>
 </resources>
