--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -73,4 +73,6 @@
     <string name="dialog_cannot_open_browser_title">Can\'t start browser</string>
     <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> has been copied to clipboard.]]></string>
     <string name="get_more_summary">View apps using Shizuku</string>
+    <string name="learn_more">Learn Shizuku</string>
+    <string name="learn_more_summary">Learn how to develop with Shizuku or get apps using Shizuku</string>
 </resources>
