finish ui for "switch context if needed"

--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -69,4 +69,6 @@
     <string name="get_more_summary">查看使用 Shizuku 的应用</string>
     <string name="learn_more">了解 Shizuku</string>
     <string name="learn_more_summary">了解如何使用 Shizuku 开发或查看使用 Shizuku 的应用</string>
+    <string name="keep_su_context">使用完整 root（如果可用）</string>
+    <string name="keep_su_context_summary">关闭此选项（或你的 su 不支持时）会使用 adb shell 的 secontext</string>
 </resources>
