--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@
     <string name="get_more_summary">View apps using Shizuku</string>
     <string name="learn_more">Learn Shizuku</string>
     <string name="learn_more_summary">Learn how to develop with Shizuku or get apps using Shizuku</string>
+    <string name="keep_su_context">Use full root if available</string>
+    <string name="keep_su_context_summary">Disable this option (or not supported by your su) will use the secontext of adb shell</string>
 </resources>
