--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -69,5 +69,7 @@
     <string name="get_more_summary">檢視使用 Shizuku 的應用程式</string>
     <string name="learn_more">瞭解 Shizuku</string>
     <string name="learn_more_summary">瞭解如何使用 Shizuku 開發或檢視使用 Shizuku 的程式</string>
+    <string name="keep_su_context">使用完整 root（如果可用）</string>
+    <string name="keep_su_context_summary">關閉此選項（或你的 su 不支援時）會使用 adb shell 的 secontext</string>
 
 </resources>
