--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -37,6 +37,10 @@
     <string name="auth_manager_no_token">Shizuku 未正确接收令牌，请尝试重新启动核心服务，或是使用主界面的获取令牌。</string>
     <string name="auth_service_dead">可能由于非正常重启等原因，核心服务需要重新启动。</string>
     <string name="auth_cannot_connect">无法连接至核心服务，请确认其正在运行。</string>
+    <string name="auth_legacy_not_support_title">%1$s 不支持现代 Shizuku</string>
+    <string name="auth_legacy_not_support_message"><![CDATA[
+    旧式 Shizuku 已于 2019 年 3 月被弃用。此外，它无法在 Android 11 及更高版本运行。<p>请要求 <b>%1$s</b> 的开发者进行更新。
+    ]]></string>
     <string name="authorized_apps_manage">应用管理</string>
     <plurals name="authorized_apps_count">
         <item quantity="other"><![CDATA[已授权 %d 个应用]]></item>
