--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -37,6 +37,10 @@
     <string name="auth_manager_no_token">Shizuku 未正確接收憑證，請嘗試重新啟動核心服務，或是使用主介面的取得憑證。</string>
     <string name="auth_service_dead">可能由於非正常重新啟動等原因，核心服務需要重新啟動。</string>
     <string name="auth_cannot_connect">無法連線至核心服務，請確認其正在執行。</string>
+    <string name="auth_legacy_not_support_title">%1$s 不支援現代 Shizuku</string>
+    <string name="auth_legacy_not_support_message"><![CDATA[
+    舊式 Shizuku 已於 2019 年 3 月被棄用。此外，它無法在 Android 11 及更高版本執行。<p>請要求 <b>%1$s</b> 的開發者進行更新。
+    ]]></string>
     <string name="authorized_apps_manage">應用程式管理</string>
     <plurals name="authorized_apps_count">
         <item quantity="other"><![CDATA[已授權 %d 個程式]]></item>
