--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -58,7 +58,7 @@
     <string name="notification_service_start_failed">启动 Shizuku 服务失败。</string>
     <string name="notification_service_start_no_root">请求 root 权限失败。</string>
     <string name="notification_working">工作中…</string>
-    <string name="requires_legacy">* 需要旧式 Shizuku</string>
+    <string name="requires_legacy">* 需要旧式 Shizuku（已弃用）</string>
     <string name="settings_language">语言</string>
     <string name="settings_user_interface">界面外观</string>
     <string name="black_night_theme">黑色夜间主题</string>
