--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -41,6 +41,10 @@
     <string name="auth_legacy_not_support_message"><![CDATA[
     旧式 Shizuku 已于 2019 年 3 月被弃用。此外，它无法在 Android 10 及更高版本运行。<p>请要求 <b>%1$s</b> 的开发者进行更新。
     ]]></string>
+    <string name="auth_requesting_legacy_title">%1$s 正在请求旧式 Shizuku</string>
+    <string name="auth_requesting_legacy_message"><![CDATA[
+    <b>%1$s</b> 支持现代 Shizuku，但它正在请求旧式 Shizuku。这可能是因为 Shizuku 没有运行，请在 Shizuku 应用内检查。<p>注意，旧式 Shizuku 已于 2019 年 3 月被弃用且无法在 Android 10 及更高版本运行。
+    ]]></string>
     <string name="authorized_apps_manage">应用管理</string>
     <plurals name="authorized_apps_count">
         <item quantity="other"><![CDATA[已授权 %d 个应用]]></item>
